# cantrik

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEFINITION_OF_DONE.md  LICENSE  README.md  TASK.md  rustfmt.toml
.bench/: README.md
.cursor/rules/: cantrik-core.mdc  cantrik-planning.mdc  cantrik-rust.mdc
.cursor/skills/rust-cli-feature-delivery/: SKILL.md
.cursor/skills/sprint-task-sync/: SKILL.md
.githooks/: pre-commit
.github/: README.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release_audit.md  swe_e2e_reliability.md
.github/instructions/: planning-task.instructions.md  rust-cantrik.instructions.md
.github/skills/rust-cli-feature-delivery/: SKILL.md
.github/skills/sprint-task-sync/: SKILL.md
.github/workflows/: benchmark-harness.yml  cantrik-site.yml  ci.yml  coverage.yml  release.yml  runsc-sandbox-smoke.yml  self-improve-gate.yml  swe-e2e-smoke.yml  winget-validate.yml
apps/: README.md
apps/cantrik-site/: README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js
apps/cantrik-site/src/: app.css
apps/cantrik-site/src/lib/: docsNav.ts
apps/cantrik-site/src/routes/: +layout.svelte  +page.svelte
apps/cantrik-site/static/registry/: extensions.json  plugins.json  recipes.json
apps/cantrik-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/cantrik-tauri/src/: main.ts
apps/cantrik-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/cantrik-tauri/src-tauri/capabilities/: default.json
apps/cantrik-tauri/src-tauri/src/: lib.rs  main.rs
apps/cantrik-tray/: Cargo.toml
apps/cantrik-tray/src/: main.rs
apps/cantrik-vscode/: .vscodeignore  package-lock.json  package.json
apps/cantrik-vscode/src/: extension.ts
contrib/git-hooks/: pre-commit-review.sample
contrib/launchd/: com.cantrik.daemon.plist
contrib/plugins/: example.lua
contrib/skill-registry/agent-mcp-basics/: manifest.toml
contrib/skill-registry/agent-mcp-basics/skills/: mcp-for-agents.md
contrib/skill-registry/code-review-checklist/: manifest.toml
contrib/skill-registry/code-review-checklist/skills/: review-checklist.md
contrib/skill-registry/demo/: manifest.toml
contrib/skill-registry/demo/skills/: demo-tip.md
contrib/skill-registry/docs-and-adrs/: manifest.toml
contrib/skill-registry/rust-cli-conventions/: manifest.toml
contrib/skill-registry/rust-testing-hints/: manifest.toml
contrib/skill-registry/skill-pack-authoring/: manifest.toml
contrib/systemd/: cantrik-daemon.service
contrib/wasm/: after_write_ping.wat
crates/cantrik-cli/: Cargo.toml
crates/cantrik-cli/src/: cli.rs  lib.rs  main.rs  repl.rs  repl_completion.rs
crates/cantrik-cli/src/commands/: agents_cmd.rs  approval_record.rs  ask.rs  background_cmd.rs  collab_cmd.rs  completions.rs  configure_cmd.rs  cost_cmd.rs  daemon_cmd.rs  diff_cmd.rs  doctor.rs  exec_cmd.rs  experiment_cmd.rs  fetch_cmd.rs  file_cmd.rs  fix_cmd.rs  git_cmd.rs  health.rs  index.rs  init_cmd.rs  intelligence_cmd.rs  listen_cmd.rs  lsp_cmd.rs  macro_cmd.rs  mcp_client_cmd.rs  mod.rs  plan.rs  pr_cmd.rs  registry_cmd.rs  review_cmd.rs  rgrep_cmd.rs  rollback_cmd.rs  search.rs  serve_mcp.rs  session_cmd.rs  session_llm.rs  skill_cmd.rs  status_cmd.rs  sync_cmd.rs  visualize_cmd.rs  (+2 more)
crates/cantrik-cli/templates/init/generic/: cantrik.toml  rules.md
crates/cantrik-cli/templates/init/rust-cli/: cantrik.toml  rules.md
crates/cantrik-core/: Cargo.toml
crates/cantrik-core/migrations/: 20250403120000_session_memory.sql  20250404120000_background_jobs.sql  20250405120000_llm_usage.sql  20250406120000_adaptive_begawan.sql
crates/cantrik-core/src/: audit.rs  config.rs  cultural_wisdom.rs  lib.rs  provenance.rs  usage_ledger.rs  voice.rs
crates/cantrik-core/src/background/: mod.rs  notify.rs
crates/cantrik-core/src/checkpoint/: meta.rs  mod.rs
crates/cantrik-core/src/git_workflow/: branch.rs  commit.rs  mod.rs  pr.rs  review.rs  run.rs
crates/cantrik-core/src/indexing/: chunk.rs  graph.rs  lsp_symbols.rs  manifest.rs  mod.rs  scan.rs  writer.rs
crates/cantrik-core/src/intelligence/: deps.rs  explain.rs  mod.rs  teach.rs
crates/cantrik-core/src/llm/: anthropic.rs  complexity.rs  cost.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs  providers.rs  stream_util.rs
crates/cantrik-core/src/multi_agent/: mod.rs  orchestrator.rs  parse.rs  tests.rs
crates/cantrik-core/src/planning/: engine.rs  mod.rs  model.rs  parse.rs  tests.rs
crates/cantrik-core/src/plugins/: lua_runtime.rs  mod.rs  wasm_runtime.rs
crates/cantrik-core/src/search/: embed_ollama.rs  mod.rs  pipeline.rs  store.rs  types.rs
crates/cantrik-core/src/semantic_diff/: collab.rs  diff_lines.rs  git_conflicts.rs  git_workspace.rs  index_map.rs  mod.rs  report.rs  risk.rs  tests_hint.rs
crates/cantrik-core/src/session/: adaptive_memory.rs  anchors.rs  context.rs  db.rs  mod.rs  paths.rs
crates/cantrik-core/src/skills/: load.rs  mod.rs  select.rs
crates/cantrik-core/src/tool_system/: approvals.rs  dispatch.rs  forbidden.rs  git_allow.rs  mod.rs  sandbox.rs  tier.rs
crates/cantrik-core/src/tools/: mod.rs  read.rs  write.rs
crates/cantrik-core/src/visualize/: mermaid.rs  mod.rs
docs/: DOD_GO_NO_GO.md  DOD_RELEASE_GATE.md  DOD_VERIFICATION_MATRIX.md  rfc-hybrid-ssh-executor.md  runsc-microvm-roadmap.md  tree-sitter-language-extensions.md
examples/: cuaca.py  game.py  kalkulator.py
packaging/: README.md  nfpm.yaml
packaging/arch/: PKGBUILD
packaging/homebrew/: cantrik.rb
packaging/nix/: README.md  flake.nix
packaging/winget/: Sangkan.Cantrik.yaml
prd/: cantrik-doc.js  cantrik-prd.docx  cantrik-prd.md  package-lock.json
scripts/: benchmark-harness-stub.sh  dod-auto-smoke.sh  phase5-smoke.sh  self-improve-dry-run.sh  self-improve-gated-patch.sh  self-improve-suggest-patch.sh  swe-fix-demo.sh  validate-extensions-registry.py  validate-recipes-registry.py
tests/fixtures/: README.md  cantrik-fix-issue-sample.html  catalog.json
uji_coba/: data.txt
(+31 files in other folders)
