[workspace]
members = [
	"crates/cantrik-cli",
	"crates/cantrik-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
bytes = "1.11.1"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
url = "2.5.8"
