[package]
name = "cantrik-tray"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Poll Cantrik approval flag and show desktop notifications (Sprint 19 companion)."
publish = false

[dependencies]
dirs = "6.0.0"
notify-rust = "4.11.7"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
