[package]
name = "cantrik-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cantrik"
path = "src/main.rs"

[dependencies]
cantrik-core = { path = "../cantrik-core" }
clap.workspace = true
clap_complete.workspace = true
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
