[package]
name = "cantrik-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cantrik"
path = "src/main.rs"

[dependencies]
cantrik-core = { path = "../cantrik-core" }
clap.workspace = true
fs2 = "0.4.3"
clap_complete.workspace = true
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "process"] }
rmcp = { version = "1.3.0", features = ["server", "macros", "transport-io", "schemars", "client", "transport-child-process"] }
tower-lsp = "0.20.0"
