[package]
name = "cantrik-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
include = ["src/**", "templates/**", "Cargo.toml"]

[[bin]]
name = "cantrik"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6"

[dependencies]
cantrik-core = { path = "../cantrik-core" }
clap.workspace = true
fs2 = "0.4.3"
clap_complete.workspace = true
crossterm = "0.29.0"
ignore = "0.4.25"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit = "0.22.22"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "process"] }
rmcp = { version = "1.3.0", features = ["server", "macros", "transport-io", "schemars", "client", "transport-child-process"] }
tower-lsp = "0.20.0"
