[package]
name = "cantrik-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
dirs = "6.0.0"
futures-util.workspace = true
hex = "0.4.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
similar = "3.0.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
toml.workspace = true
thiserror.workspace = true
url.workspace = true
uuid = { version = "1.23.0", features = ["v4", "serde"] }
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-typescript = "0.23.2"
ignore = "0.4.25"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-md = "0.5.3"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
lancedb = "0.27.2"
mlua = { version = "0.11.6", features = ["lua54", "send", "vendored"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wasmtime = { version = "43.0.0", default-features = false, features = ["runtime", "cranelift"] }
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
tree-sitter-html = "0.23.2"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wat = "1.246.2"
